--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/echarts": "^4.9.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.19.2",
     "@types/react": "^16.9.54",
     "@types/react-dom": "^16.9.9",
+    "echarts": "^4.9.0",
+    "echarts-for-react": "^2.0.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
