--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@types/node": "^12.19.2",
     "@types/react": "^16.9.54",
     "@types/react-dom": "^16.9.9",
+    "@types/react-map-gl": "^5.2.9",
+    "@types/react-router-dom": "^5.1.6",
     "echarts": "^4.9.0",
     "echarts-for-react": "^2.0.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-map-gl": "^5.2.10",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
