--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/d3-request": "^1.0.6",
     "@types/echarts": "^4.9.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.19.2",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^16.9.9",
     "@types/react-map-gl": "^5.2.9",
     "@types/react-router-dom": "^5.1.6",
+    "d3-request": "^1.0.6",
     "echarts": "^4.9.0",
     "echarts-for-react": "^2.0.16",
     "react": "^17.0.1",
